# deafadder-container

./: .coveragerc  .flake8  .gitignore  Makefile  README.rst  package-lock.json  pyproject.toml
.circleci/: config.yml
build-scripts/: check_version.sh  get-parent.sh  handle-hotfix.sh  handle-release.sh  update-version.sh
deafadder_container/: ContainerException.py  DeafAdderUtils.py  InjectionUtils.py  MetaTemplate.py  Wiring.py
docs/: README.md  _coverpage.md  _sidebar.md  changelog.md  index.html
docs/DevZone/: branchingModel.md
docs/Features/: autowire.md  component-from-normal-class.md  delete.md  get_all.md  post-init.md  readme.md  scope.md  singleton.md  testing.md
docs/GettingStarted/: installation.md  quickstart.md
docs/GettingStarted/AdvancedUsage/: advanced.md  autowire.md
docs/InDepth/: memory-model.md
tests/: deafadder_container_injectionutils_test_helper.py  deafadder_container_metatemplate_test_helper.py  test_deafadder_container.py  test_deafadder_container_autowiring.py  test_deafadder_container_injectionutils.py  test_deafadder_container_metatemplate.py  test_deafadder_container_metatemplate_use_case.py
