[tool.poetry]
name = "deafadder-container"
version = "0.4.0"
description = "A dependency injection tools and container manager for python"
authors = ["Leddzip <none>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
coverage = "^6.1"
flake8 = "^4.0.1"
flake8-bugbear = "^21.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
